[gd_scene load_steps=9 format=3 uid="uid://bgioejj4mplt5"]

[ext_resource type="Script" uid="uid://04x20oorpcqe" path="res://scenes/ui/battle/unit_context_menu.gd" id="1_oqchr"]
[ext_resource type="Texture2D" uid="uid://c5fu8o4der4we" path="res://assets/sprites/temp_sheets/UI assets pack 2/UI books & more.png" id="2_okpkv"]
[ext_resource type="Texture2D" uid="uid://c675cicgors76" path="res://assets/sprites/temp_sheets/UI Assets pack_v.1_st/Book.png" id="3_6mc4k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vmu5k"]
texture = ExtResource("2_okpkv")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
region_rect = Rect2(769, 17, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mc4k"]
atlas = ExtResource("3_6mc4k")
region = Rect2(320, 240, 48, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x33sw"]
texture = ExtResource("2_okpkv")
texture_margin_left = 12.0
texture_margin_top = 8.0
texture_margin_right = 11.0
texture_margin_bottom = 8.0
region_rect = Rect2(112, 272, 32, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6mc4k"]
texture = ExtResource("2_okpkv")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(161, 336, 30, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_okpkv"]
texture = ExtResource("2_okpkv")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(225, 337, 30, 15)

[node name="UnitContextMenu" type="Panel"]
custom_minimum_size = Vector2(165, 94)
offset_right = 165.0
offset_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vmu5k")
script = ExtResource("1_oqchr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = -24.0
offset_right = 23.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_6mc4k")
stretch_mode = 4

[node name="HeaderBanner" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
offset_left = -7.0
offset_top = -6.0
offset_right = 172.0
offset_bottom = 19.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x33sw")

[node name="HeaderLabel" type="Label" parent="HeaderBanner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 18)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Unit Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.5
offset_top = -73.0
offset_right = 71.5
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="AbilityContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2

[node name="AbilityButton1" type="Button" parent="VBoxContainer/HBoxContainer/AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/normal = SubResource("StyleBoxTexture_okpkv")
text = "Lightnig Strike"
autowrap_mode = 2

[node name="AbilityButton2" type="Button" parent="VBoxContainer/HBoxContainer/AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/normal = SubResource("StyleBoxTexture_okpkv")
text = "Encourage"
autowrap_mode = 2

[node name="BaseOption" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="MeleeButton" type="Button" parent="VBoxContainer/HBoxContainer/BaseOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/normal = SubResource("StyleBoxTexture_okpkv")
text = "Melee"
autowrap_mode = 2

[node name="DefendButton" type="Button" parent="VBoxContainer/HBoxContainer/BaseOption"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 32)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/hover = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/pressed = SubResource("StyleBoxTexture_6mc4k")
theme_override_styles/normal = SubResource("StyleBoxTexture_okpkv")
text = "Defend"
autowrap_mode = 2
